--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -33,7 +33,7 @@
       <div id="form_box">
         <form action="/" method="POST">
           <p id="form_heading"><i class="fas fa-sign-in-alt"></i> Login to your account</p>
-        <input type="text" placeholder="Username" name="username" autocomplete="on" autocapitalize="off" required><br>
+        <input type="text" placeholder="Username" name="username" autocomplete="off" autocapitalize="off" required><br>
           <input type="password" placeholder="Password" name="pw" id="pwhomepage" required><br>
           <input type="checkbox" onclick="mypw()">Show Password<br>
        
