--- a/templates/make_call.html
+++ b/templates/make_call.html
@@ -33,7 +33,7 @@
     Enter a phone number(add country code): 
     <input type="tel" name="phonenum" autocomplete="on" value="+13474568702"><br><br> -->
     <a style="color: #FFFFFF;">Enter the phone number you want to record:</a>
-    <input type="tel" name="phonenum2" pattern="[0-9]{11}" autocomplete="on" required><br>
+    <input type="tel" name="phonenum2" pattern="[0-9]{11}" autocomplete="off" required><br>
     <input type="submit" value="call">
   </form>
 </div>
