--- a/templates/make_call.html
+++ b/templates/make_call.html
@@ -29,13 +29,11 @@
 
 <div align="center" >
   <form action="/call" method="POST">
-    <!-- #no need for user to input their num, we'll just grab it from the db. 
-    Enter a phone number(add country code): 
-    <input type="tel" name="phonenum" autocomplete="on" value="+13474568702"><br><br> -->
     <a style="color: #FFFFFF;">Enter the phone number you want to record:</a>
-    <input type="tel" name="phonenum2" pattern="[0-9]{11}" autocomplete="off" required><br>
+    <input type="text" id="phonenum2" name="phonenum2" placeholder="123-456-7890" autocomplete="off" required><br>
     <input type="submit" value="call">
   </form>
 </div>
 </div>
+<script src="static/js/make_call.js"></script>
 {% endblock %}
